create a for loop to create 26 divs containing all letters

--- a/index.html
+++ b/index.html
@@ -6,10 +6,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>hangman</title>
+    <title>Hangman</title>
     <link rel="stylesheet" href="./stylesheet.css">
 </head>
 
 <body>
+    <div id="body_div">
+        <div id="gameboard_container">
+            <div id="hangman_container"></div>
+            <div id="word_container"></div>
+            <div id="alphabet_container"></div>
+        </div>
+    </div>
     <script src="./hangman.js"></script>
 </body>
