add word to guess visual

--- a/index.html
+++ b/index.html
@@ -25,7 +25,13 @@
                     </div>
                 </div>
             </div>
-            <div id="word_container"></div>
+            <div id="word_container">
+                <div id="input_and_button">
+                    <input type="text" id="input_container" placeholder="Enter Guess"></input>
+                    <button id="guess_word">Guess</button>
+                </div>
+                <div id="word_to_guess"></div>
+            </div>
             <div id="alphabet_container"></div>
         </div>
     </div>
