able to add onto hangman stick

--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
             <div id="hangman_container">
                 <div id="hangman_pole">
                     <div id="border-left"></div>
-                    <div id="head"></div>
-                    <div id="body">
+                    <!-- <div id="head"></div> -->
+                    <!-- <div id="body">
                         <div id="left_arm"></div>
                         <div id="right_arm"></div>
                         <div id="left_leg"></div>
                         <div id="right_leg"></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
             <div id="word_container">
