added modal and made user unable to click anymore when user loses or wins;

--- a/index.html
+++ b/index.html
@@ -11,18 +11,14 @@
 </head>
 
 <body>
+    <div id="win_modal">
+        <div id="inner_win_modal"></div>
+    </div>
     <div id="body_div">
         <div id="gameboard_container">
             <div id="hangman_container">
                 <div id="hangman_pole">
                     <div id="border-left"></div>
-                    <!-- <div id="head"></div> -->
-                    <!-- <div id="body">
-                        <div id="left_arm"></div>
-                        <div id="right_arm"></div>
-                        <div id="left_leg"></div>
-                        <div id="right_leg"></div>
-                    </div> -->
                 </div>
             </div>
             <div id="word_container">
