--- a/index.html
+++ b/index.html
@@ -11,9 +11,6 @@
 </head>
 
 <body>
-    <div id="win_modal">
-        <div id="inner_win_modal"></div>
-    </div>
     <div id="body_div">
         <div id="gameboard_container">
             <div id="hangman_container">
@@ -26,7 +23,10 @@
                     <input type="text" id="input_container" placeholder="Enter Guess"></input>
                     <button id="guess_word">Guess</button>
                 </div>
-                <div id="word_to_guess"></div>
+                <div id="word_to_guess">
+                    <div id="category"></div>
+                    <div id="word_to_guess_letters"></div>
+                </div>
             </div>
             <div id="alphabet_container"></div>
         </div>
